Feat: 後端登入及註冊api,新增Jest測試endpoint (#13)
* Feature-後端database建立 (#11) (#12)

* Feat: database schema init

* Fix: original one didn't seed the database

* Feature: prop error to get error message

* Feat: sendRegisterEmail.
has installed nodemailer,
express-validator and jsonwebtoken.
be care that env has added keys,
has create some utils that can reuse.
isDataExistInDatabase function has use @@ts-ignore it is okay to not type check there, i'm sure there is no bug there.

* Feat: createMember.

* Feat: login api end point.

* Fix: verify isEmailExist is not working.

* Docs: sendRegisterEmail swagger api document.

* Docs: add swagger document

* Fix: didn't check token type in createMember endpoint.

* Fix: add memberIsland recore when create member.

* Docs: didn't add token in response document.

* Refactor: make an endpint workflow more easy.
the endpoint from router to handler
router: deal with validation and swagger document.
controller: get variable from body  or others, maybe do some change to them,then pass to handler.
handler: deal the main part of endpoint.

created these folder: validations, helpers.
validatons: deal with validation of endpoint.
helpers: storage functions that need to interact with database.
utils: storage functions that doesn't interact with database.

!! createMember and Login endpoint is not transfer to this structure yet !!

* Refactor: createMember endpoint to new structure.

* Refactor: login endpoint to new structure.
if an endpoint route has res.locals = req.locals that means i have injected some data to req.locals in validator, then transfer to to res.locals.
then we could use the locals data in controller.
this workflow may let validation process thing that need connect to database.
and able to pass data through locals.

* Refactor: get nodemailer transporter to ctx.

* Docs: this console is permanent.

* Fix: didn't pass createMemberData succeessfully.

* Fix: didn't has
